# SYSDoom

./: .gitignore  .gitmodules  CMakeLists.txt  ideas.txt  sysdoom.ugh  test.wad  test.wad.bak
SYSAct/: CMakeLists.txt
SYSAct/src/: action.c  action.h  main.c  multistructConfig.h  progInfo.h
SYSAct/src/lang/: english.h
SYSActBuilder/: CMakeLists.txt
SYSActBuilder/src/: action.c  action.h  lang.h  macros.h  main.c  main.h  multistruct.h  progInfo.h.in
SYSActBuilder/src/lang/: english.h
SYSActBuilder/src/submodules/: CMakeLists.txt  cimgui_impl.h
src/: CMakeLists.txt  i_video.h  m_config.c
src/doom/: CMakeLists.txt  d_main.c  doomdata.h  m_random.c  p_enemy.c  p_inter.c  p_local.h  p_map.c  p_mobj.c  p_mobj.h  p_setup.c  p_spec.c  p_spec.h  p_switch.c  p_telept.c  p_user.c  r_defs.h
src/doom/sys/: action.c  action.h  multistruct.h  multistructConfig.h
src/doom/sys/actions/: freeze.c  message.c  spawnThing.c  teleport.c  test.c
